# mate-common

./: Makefile.am  autogen.sh  configure.ac
doc/: Makefile.am
doc-build/: Makefile.am
macros/: Makefile.am  mate-autogen  mate-compiler-flags.m4
