#   Copyright (C) 2022  Libre MATE
#
# This file is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; see the file COPYING3.  If not see
# <http://www.gnu.org/licenses/>.

AC_INIT([mate-common], [1.26.0], [https://github.com/Libre-MATE/mate-common])
AC_PREREQ(2.60)
AC_COPYRIGHT([Copyright (C) 2022 Libre MATE])
AC_CONFIG_SRCDIR([macros/mate-autogen])
AM_INIT_AUTOMAKE([1.11 foreign no-dist-gzip dist-xz silent-rules check-news])
AM_MAINTAINER_MODE([enable])

AC_CONFIG_FILES([
Makefile
macros/Makefile
doc-build/Makefile
doc-build/mate-doc-common
doc/Makefile
])

AC_OUTPUT
